# eulerian

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  deploy.sh  setup.py
include/eulerian/: generate.h
include/nlnum/: eulerian.h  partitions_in.h
src/: CMakeLists.txt  eulerian.cc  generate.cc  module.cc  partitions_in.cc
tests/: CMakeLists.txt  test_eulerian.cc  test_generate.cc
